--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,13 @@ dependencies:
   motion_toast: ^2.8.0
   intl: ^0.20.2
   file_picker: ^10.3.3
+  #webview_flutter: ^4.0.7
+  #html_to_pdf: ^0.8.1
   csv: ^6.0.0
   shared_preferences: ^2.2.2
   window_manager: ^0.5.1
   bcrypt: ^1.1.3
+  syncfusion_flutter_pdf: 31.1.23
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/forms/2_F366_Claim_Form.pdf
     - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
