--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   window_manager: ^0.5.1
   bcrypt: ^1.1.3
   syncfusion_flutter_pdf: 31.1.23
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
